--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">2<br />
+										<h2><a href="https://did.li/uoQlC">2<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://did.li/uoQlC" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>explain about 2</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://did.li/uoQlC" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
