--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Ran Langer Data Analyst portfolio<br />
+						<h1>Ran Langer Data Analyst portfoli<br />
 						</h1>
 						<p>Experienced Data Analyst 
 							Well versed with Python, SQL, Excel &  Tableau
